--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,9 +24,12 @@
 @import 'components/form';
 @import 'components/story';
 
+@import 'layout/flex';
 @import 'layout/footer';
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/navigation';
 
 @import 'pages/home';
+@import 'pages/workspace';
+@import 'pages/sign-in-out';
