--- a/resources/sass/abstract/_variables.scss
+++ b/resources/sass/abstract/_variables.scss
@@ -18,7 +18,7 @@ $color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
-
+$color-red-dark: #961d1d;
 
 // FONT
 $default-font-size: 1.6rem;
