--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -20,3 +20,24 @@ html {
 body {
 	box-sizing: border-box;
 }
+
+a {
+  &:hover,
+  &:active {
+    box-shadow: 0 1rem 2rem rgba($color-black, .4);
+    color: $color-primary-light !important;
+    transform: scale(1.2);
+    transition: all .2s;
+  }
+
+  &:link,
+  &:visited {
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+  }
+}
+
+ul {
+  list-style: none;
+}
