--- a/resources/sass/base/_utils.scss
+++ b/resources/sass/base/_utils.scss
@@ -29,3 +29,11 @@
 .u-margin-top-small {
 	margin-top: 1.5rem !important;
 }
+
+.u-width-full {
+  width: 100% !important;
+}
+
+.u-text-center {
+  text-align: center !important;
+}
