--- a/resources/sass/components/_card.scss
+++ b/resources/sass/components/_card.scss
@@ -59,17 +59,17 @@
 
 		&--1 {
 			background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
-			 url(/img/nat-5.jpg);
+			 url(/img/photo-1.jpg);
 		}
 
 		&--2 {
 			background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
-			url(/img/nat-6.jpg);
+			url(/img/photo-2.jpg);
 		}
 
 		&--3 {
 			background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
-			url(/img/nat-7.jpg);
+			url(/img/photo-3.jpg);
 		}
 	}
 
