--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -1,8 +1,18 @@
 .form {
 
-	&__group:not(:last-child) {
-		margin-bottom: 2rem;
+	&__group {
+    &--btn-with-text {
+      display: inline-grid;
+      transform: translateX(-50%);
+      left: 50%;
+      position: relative;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 2rem;
+    }
 	}
+
 
 	&__input {
 		background-color: rgba($color-white, .5);
@@ -58,7 +68,7 @@
 			position: absolute;
 			top: -.4rem;
 			width: 3rem;
-	
+
 			&::after {
 				background-color: $color-primary;
 				border-radius: 50%;
@@ -95,4 +105,53 @@
 	&__radio-input:checked ~ &__radio-label &__radio-button::after {
 		opacity: 1;
 	}
+
+  &__checkbox {
+
+    &-button {
+      border: 5px solid $color-primary;
+      border-radius: .5rem;
+      display: inline-block;
+      height: 3rem;
+      left: 0;
+      position: absolute;
+      top: -.4rem;
+      width: 3rem;
+
+      &::after {
+        background-color: $color-primary;
+        border-radius: .1rem;
+        content: '';
+        display: block;
+        height: 1.3rem;
+        left: 50%;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        transition: opacity .2s;
+        width: 1.3rem;
+      }
+    }
+
+    &-group {
+      margin-bottom: 2rem;
+      width: 49%;
+    }
+
+    &-input {
+      display: none;
+    }
+
+    &-label {
+      cursor: pointer;
+      font-size: $default-font-size;
+      padding-left: 4.5rem;
+      position: relative;
+    }
+  }
+
+  &__checkbox-input:checked ~ &__checkbox-label &__checkbox-button::after {
+    opacity: 1;
+  }
 }
