--- a/resources/sass/layout/_navigation.scss
+++ b/resources/sass/layout/_navigation.scss
@@ -1,60 +1,54 @@
-.navigation {
-	
-	&__checkbox {
+.nav-menu {
+  background-color: $color-grey-dark-3;
+  z-index: 1000;
+}
 
-	}
-	
-	&__button {
-		background-color: $color-white;
-		border-radius: 50%;
-		height: 7rem;
-		position: fixed;
-		right: 6rem;
-		top: 6rem;
-		width: 7rem;
-		z-index: 2000;
-	}
+.menu {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0 auto;
 
-	&__background {
-		background-image: radial-gradient($color-primary-light, $color-primary-dark);
-		border-radius: 50%;
-		height: 6rem;
-		position: fixed;
-		right: 6.5rem;
-		top: 6.5rem;
-		transform: scale(80);
-		width: 6rem;
-		z-index: 1000;
-	}
-	
-	&__nav {
-		height: 100vh;
-		position: fixed;
-		right: 0;
-		top: 0;
-		width: 100%;
-		z-index: 1500;
-	}
-	
-	&__list {
-		position: absolute;
-		left: 50%;
-		list-style: none;
-		text-align: center;
-		top: 50%;
-		transform: translate(-50%, -50%);
-	}
-	
-	&__item {
-		margin: 1rem;
-	}
-	
-	&__link {
-		background-image: linear-gradient(120deg, orangered 0%, orangered 50%, $color-white 50%);
-		color: $color-white;
-		font-size: 3rem;
-		font-weight: 300;
-		text-decoration: none;
-		text-transform: uppercase;
-	}
+  &--right {
+    display: inline-flex;
+    position: absolute;
+    right: 3rem;
+  }
+}
+
+.menu li {
+  align-items: center;
+  display: flex;
+  height: 5rem;
+  justify-content: center;
+  transition: background-position-x 0.9s linear;
+  text-align: center;
+  width: 10rem;
+
+  a {
+    color: $color-white;
+    font-size: 1.5rem;
+    text-decoration: none;
+    transition: all 0.45s;
+  }
+
+  &:hover {
+    background: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB2ZXJzaW9uPSIxLjEi%0D%0AIGlkPSJMYXllcl8xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhs%0D%0AaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIKCSB3aWR0%0D%0AaD0iMzkwcHgiIGhlaWdodD0iNTBweCIgdmlld0JveD0iMCAwIDM5MCA1MCIgZW5hYmxlLWJhY2tn%0D%0Acm91bmQ9Im5ldyAwIDAgMzkwIDUwIiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHBhdGggZmlsbD0i%0D%0Abm9uZSIgc3Ryb2tlPSIjZDk0ZjVjIiBzdHJva2Utd2lkdGg9IjEuNSIgc3Ryb2tlLW1pdGVybGlt%0D%0AaXQ9IjEwIiBkPSJNMCw0Ny41ODVjMCwwLDk3LjUsMCwxMzAsMAoJYzEzLjc1LDAsMjguNzQtMzgu%0D%0ANzc4LDQ2LjE2OC0xOS40MTZDMTkyLjY2OSw0Ni41LDI0My42MDMsNDcuNTg1LDI2MCw0Ny41ODVj%0D%0AMzEuODIxLDAsMTMwLDAsMTMwLDAiLz4KPC9zdmc+Cg==");
+    animation: line 1s;
+  }
+
+  &:hover a {
+    color: $color-secondary-light;
+  }
+
+  &:not(:last-child) {
+    margin-right: 1.5rem;
+  }
+}
+
+@keyframes line {
+  0% {
+    background-position-x: 390px;
+  }
 }
