Funcionando exibicao unica de galeria, feito relacionamento com cliente e galeria

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,5 +31,6 @@
 @import 'layout/navigation';
 
 @import 'pages/home';
-@import 'pages/workspace';
+@import 'pages/gallery';
 @import 'pages/sign-in-out';
+@import 'pages/workspace';
