--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1067,8 +1067,51 @@ body {
   width: 50%;
 }
 
-.section-home {
-  padding: 0.5rem 1rem;
+/* The grid: Four equal columns that floats next to each other */
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+
+.column img {
+  opacity: 0.8;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container (positioning is needed to position the close button and the text) */
+
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Closable button inside the image */
+
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
 }
 
 .section-sign-in-out {
@@ -1085,5 +1128,9 @@ body {
   margin: 0 auto;
   padding: 6rem;
   width: 45%;
+}
+
+.section-home {
+  padding: 0.5rem 1rem;
 }
 
