--- a/resources/sass/pages/_workspace.scss
+++ b/resources/sass/pages/_workspace.scss
@@ -4,4 +4,14 @@
 
 .section-gallery {
 
+  .form {
+
+    &__input {
+      width: 100%;
+    }
+
+    &__label {
+      margin-left: 0;
+    }
+  }
 }
