--- a/resources/sass/base/_utils.scss
+++ b/resources/sass/base/_utils.scss
@@ -34,6 +34,10 @@
   width: 100% !important;
 }
 
-.u-text-center {
-  text-align: center !important;
+.u-flex-basis-100 {
+  flex-basis: 100% !important;
+}
+
+.u-flex-basis-50 {
+  flex-basis: 50% !important;
 }
