--- a/public/css/app.css
+++ b/public/css/app.css
@@ -838,6 +838,8 @@ input[type=file] + .form__label svg {
 .flex {
   display: flex;
   flex-wrap: wrap;
+  max-height: 90vh;
+  overflow: auto;
 }
 
 .flex__row {
@@ -1125,11 +1127,24 @@ input[type=file] + .form__label svg {
 
 /* The grid: Four equal columns that floats next to each other */
 
+.section-customer-gallery-item {
+  margin: 40px 0 60px;
+  overflow: auto;
+  text-align: center;
+}
+
+.field__customer--container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px auto;
+  width: 80%;
+}
+
 .field__item {
   float: left;
   margin: 10px;
   overflow: hidden;
-  width: 25%;
+  width: 30%;
 }
 
 .field__item img {
