--- a/resources/sass/pages/_gallery.scss
+++ b/resources/sass/pages/_gallery.scss
@@ -1,9 +1,22 @@
 /* The grid: Four equal columns that floats next to each other */
+.section-customer-gallery-item {
+  margin: 40px 0 60px;
+  overflow: auto;
+  text-align: center;
+}
+
+.field__customer--container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px auto;
+  width: 80%;
+}
+
 .field__item {
   float: left;
   margin: 10px;
   overflow: hidden;
-  width: 25%;
+  width: 30%;
 
   img {
     cursor: pointer;
