--- a/resources/sass/pages/_gallery.scss
+++ b/resources/sass/pages/_gallery.scss
@@ -12,6 +12,11 @@
   width: 80%;
 }
 
+.img--container {
+  display: block;
+  overflow: hidden;
+}
+
 .field__item {
   float: left;
   margin: 10px;
